Project

General

Profile

Actions

Bug #11601

closed

error: implicit declaration of function ‘ENC_GET’

Bug #11601: error: implicit declaration of function ‘ENC_GET’

Added by duerst (Martin Dürst) almost 11 years ago. Updated almost 11 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 2.3.0dev (2015-10-17 trunk 52142) [x86_64-cygwin]
[ruby-core:71111]

Description

When trying to compile Ruby trunk with
make up; make install-nodoc
I get the following errors:

compiling file.c
file.c: In function ‘rb_file_expand_path_internal’:
file.c:3561:2: error: implicit declaration of function ‘ENC_GET’ [-Werror=implicit-function-declaration]
encidx = ENC_GET(result);
^
file.c:3563:16: error: ‘ENCIDX_UTF_8’ undeclared (first use in this function)
if (encidx != ENCIDX_UTF_8 && rb_enc_str_coderange(result) != ENC_CODERANGE_7BIT) {
^
file.c:3563:16: note: each undeclared identifier is reported only once for each function it appears in
cc1: some warnings being treated as errors
Makefile:375: recipe for target 'file.o' failed
make: *** [file.o] Error 1

Actions

Also available in: PDF Atom